Fix openining/closing the download menu shifting the page by a small amount

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -81,7 +81,7 @@ h2 small
 #download-menu
   display: none
   float: left
-  padding: 0 1em 1em 0
+  margin: 0
   white-space: nowrap
   width: 0
 
